# geoPFA

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  linter.yml  publish_to_pypi.yml  pylint.yml  unit_test.yml  wheels.yml
docs/source/: conf.py
examples/Newberry/2D/config/: newberry_superhot_config.json  newberry_superhot_processed_no_vel_config.json
examples/Newberry/2D/notebooks/: 1-processing_superhot_egs_newberry_geopfa.ipynb  2-pfa_superhot_newberry_geopfa.ipynb  3D_to_2D.ipynb
examples/Newberry/3D/config/: newberry_superhot_config.json  newberry_superhot_processed_config.json  newberry_superhot_processed_no_vel_config.json
examples/Newberry/3D/notebooks/: 1-processing_with_geopfa_newberry.ipynb  2-layer_combination_newberry.ipynb
geoPFA/: __init__.py  data_readers.py  datasets.py  layer_combination.py  processing.py  transformation.py
geoPFA/geopfa2d/: __init__.py  data_readers.py  data_writers.py  layer_combination.py  plotters.py  processing.py  transformation.py
geoPFA/geopfa3d/: __init__.py  data_readers.py  layer_combination.py  plotters.py  processing.py  transformation.py  version.py
geopfa/: data_readers.py  processing.py  transformation.py
geopfa/geopfa2d/: processing.py
geopfa/geopfa3d/: plotters.py
tests/: test_geopfa.py  test_io.py  test_layer_combination.py
tests/test_processing/: test_exclusion.py
