[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "geoPFA"
version = "0.0.1"
description = "Geothermal Play Fairway Analysis"
readme = "README.md"
authors = [
  {name = "Nicole Taverna", email = "nicole.taverna@nrel.gov"}
  ]
maintainers = [
  {name = "Nicole Taverna", email = "nicole.taverna@nrel.gov"}
  ]
keywords=["geothermal", "pfa"]
requires-python = ">= 3.10"
classifiers=[
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        # "License :: OSI Approved :: BSD License",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
    ]
dependencies = [
  "iapws>=1.5.4",
  "ipython>=8.29.0",
  "joblib>=1.4.2",
  "matplotlib>=3.1",
  "networkx>=2.3",
  "notebook",
  "numpy>=1.16",
  "pandas>=1.0",
  "psutil>=6.1.0",
  "pytest>=5.2",
  "seaborn>=0.13.2",
  "geopandas>=1.0.1",
  "rasterio>=1.4.2",
  "NREL-rex>=0.2.42",
  "shapely>=2.0.6",
  "scipy>=1.14.1",
  "contextily>=1.6.2",
  "pathos>=0.3.3",
  "pykrige>=1.7",
]
[project.optional-dependencies]
dev = [
  "build>=0.10",
  "twine>=5.1",
  "pre-commit>=4.0",
]
doc = [
  "ghp-import>=2.1",
  "numpydoc>=1.6",
  "make>=0.1",
  "myst-parser>=3.0.1",
  "pandoc>=2.3",
  "pydata-sphinx-theme>=0.15",
  "sphinx>=8.1.3,<9",
  "sphinx-click>=5.1",
  "sphinx-copybutton>=0.5",
  "sphinx-tabs>=3.4",
]
test = [
  "pytest>=7.0",
  "pytest-cases>=3.8.6,<4",
  "pytest-cov>=3.0",
  "pytest-profiling>=1.7.0,<2",
  "pytest-xdist>=3.0",
  "tox>=4.0",
]

[project.urls]
homepage = "https://https://github.com/GeothermalExplorationTools/geopfa2d"
documentation = "https://https://github.com/GeothermalExplorationTools/geopfa2d"
repository = "https://https://github.com/GeothermalExplorationTools/geopfa2d"

[tool.pixi.project]
channels = ["conda-forge", "anaconda", "main"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.tasks]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "doc", "test"], solve-group = "default" }
doc = { features = ["doc"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.pypi-dependencies]
geoPFA = { path = ".", editable = true }

[tool.pixi.dependencies]
contextily = "==1.6.2"
geopandas = "==1.0.1"
joblib = "==1.4.2"
jupyterlab = ">=4.3.4,<5"
iapws = "==1.5.4"
networkx = "==3.4.2"
matplotlib = "==3.9.2"
numpy = "==2.1.3"
pandas = "==2.2.3"
pathos = "==0.3.3"
psutil = "==6.1.0"
rasterio = "==1.4.2"
scipy = "==1.14.1"
seaborn = "==0.13.2"
shapely = "==2.0.6"
pykrige = ">=1.7.2,<2"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.4,<9"
pylint = ">=3.3.3,<4"

[tool.pixi.feature.dev.dependencies]
ipython = "==8.29.0"
pre-commit = ">=4.0.1,<5"
ruff = ">=0.9.2,<0.10"
